odoo ymr c asuudlgu

--- a/nowplaying.html
+++ b/nowplaying.html
@@ -6,18 +6,18 @@
     <title>Одоо гарч буй кино</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name="description" content="Одоо гарч буй кинонууд, дэлгэцнээ гарч буй кино, кино үзэх">
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
-                <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
-                <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
-                <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
-            </ul>
+            <address>
+                <ul>
+                    <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
+                    <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
+                    <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
+                    <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
+                </ul>
+            </address>
         </nav>
         <nav>
             <ul>
@@ -129,31 +129,28 @@
     </main>
     <footer>
         <div>
+             <address>
              <ul>
                  <li>
                      <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
-                     <p><address>Монгол улс, Улаанбаатар хот, <br>
+                     <p>Монгол улс, Улаанбаатар хот, <br>
                          Хан-Уул дүүрэг 11-р хороо, <br>
                          Дүнжингаравын гудамж, <br>
-                         Зайсан Хилл Цогцолбор, 1-р давхар</address></p>
+                         Зайсан Хилл Цогцолбор, 1-р давхар</p>
                  </li>
                  <li>
                      <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
-                     <a href="mailto:info@primecineplex.mn"><address>@primecineplex.mn</address></a>
+                     <a href="mailto:info@primecineplex.mn">@primecineplex.mn</a>
                  </li>
                  <li>
                      <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
-                     <p><address>+976-7510-0000</address></p>
+                     <a href="tel:+976-7510-0000">+976-7510-0000</a>
                  </li>
              </ul>
+             </address>
         </div>
         <div>
-             <select name="location" id="">
-                 <option value="">Зайсан Хилл Комплекс</option>
-                 <option value="">Энканто товер</option>
-                 <option value="">Ботаник центер</option>
-             </select>
-             <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a></p>
+             <a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a>
         </div> 
      </footer>
 </body>
