--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </li>
                 <li>
                     <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
-                    <a href="tel:+976-7510-0000">+976-7510-0000</p>
+                    <a href="tel:+976-7510-0000">+976-7510-0000</a>
                 </li>
             </ul>
             </address>
