--- a/login.html
+++ b/login.html
@@ -10,12 +10,14 @@
         <body>
             <header>
                 <nav>
-                    <ul>
-                        <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><address><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></address></a></li>
-                        <li><a href="https://www.instagram.com/primecineplex_mongolia/"><address><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></address></a></li>
-                        <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><address><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></address></a></li>
-                        <li><a href="mailto:info@primecineplex.mn"><address><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></address></a></li>
-                    </ul>
+                    <address>
+                        <ul>
+                            <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
+                            <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
+                            <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
+                            <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
+                        </ul>
+                    </address>
                 </nav>
                 <nav>
                     <ul>
@@ -32,8 +34,8 @@
                 <div>
                     <p>Member буюу гишүүн болж байгаа гэхээр үнэхээр гоё байгаа биз. 5 кино үзээд 1 энгийн, 10 кино үзээд 1 4DX эсвэл Dolby #Atmos танхимд (хосоороо) үнэгүй кино үзнэ шүү дээ. Мөн өөрийн мэдрэмжийг бусадтай хуваалцах, үнэлгээг өгөх боломжтой.</p>
                 </div>
-                <div>
-                    <p>Нэвтрэх</p>
+                <article>
+                    <h6>Нэвтрэх</h6>
                     <ul>
                         <li><img height="25px" src="img_ts/icon_pro.png" alt="icon"><input type="email" placeholder="Нэвтрэх нэр(имэйл хаяг)"></li>
                         <li><input type="text" placeholder="Нууц үг"></li>
@@ -41,35 +43,32 @@
                         <li><a href="create.html">Бүртгүүлэх</a></li>
                     </ul>
                     <p>Нууц үгээ мартсан уу?</p>
-                </div>
+                </article>
             </main>
             <footer>
                 <div>
+                     <address>
                      <ul>
-                        <li>
-                            <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
-                                 <p><address>Монгол улс, Улаанбаатар хот, <br>
+                         <li>
+                             <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
+                             <p>Монгол улс, Улаанбаатар хот, <br>
                                  Хан-Уул дүүрэг 11-р хороо, <br>
                                  Дүнжингаравын гудамж, <br>
-                                 Зайсан Хилл Цогцолбор, 1-р давхар</address></p>
-                        </li>
-                        <li>
-                            <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
-                            <a href="mailto:info@primecineplex.mn"><address>@primecineplex.mn</address></a>
-                        </li>
-                        <li>
-                            <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
-                            <p><address>+976-7510-0000</address></p>
-                        </li>
-                    </ul>
+                                 Зайсан Хилл Цогцолбор, 1-р давхар</p>
+                         </li>
+                         <li>
+                             <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
+                             <a href="mailto:info@primecineplex.mn">@primecineplex.mn</a>
+                         </li>
+                         <li>
+                             <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
+                             <a href="tel:+976-7510-0000">+976-7510-0000</a>
+                         </li>
+                     </ul>
+                     </address>
                 </div>
                 <div>
-                     <select name="location" id="">
-                         <option value="">Зайсан Хилл Комплекс</option>
-                         <option value="">Энканто товер</option>
-                         <option value="">Ботаник центер</option>
-                     </select>
-                     <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a></p>
+                     <a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a>
                 </div> 
              </footer>
         </body>
