--- a/create.html
+++ b/create.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="mn">
     <head>
-    <title>Бүртгүүлэх</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Манай дэлгэцнээ гарч буй кинонууд, Тун удахгүй гарах кино, кино үзэх ">
+        <title>PrimeCineplexMongolia</title>
     </head>
     <body>
         <header>
             <nav>
-                <ul>
-                    <address>
+                <address>
+                    <ul>
                         <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
                         <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
                         <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
                         <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
-                        </address>
-                </ul>
+                    </ul>
+                </address>
             </nav>
             <nav>
                 <ul>
                     <li><a href="index.html"><img src="Images/logo.jpg" style="height: 50px;" alt="primeLogo"></a></li>
                     <li><a href="nowplaying.html">КИНО</a></li>
-                    <li><a href="">ЗӨВХӨН МАНАЙД</a></li>
-                    <li><a href="">ҮЙЛЧИЛГЭЭ</a></li>
+                    <li><a href="aboutus.html">ЗӨВХӨН МАНАЙД</a></li>
+                    <li><a href="aboutus.html">ҮЙЛЧИЛГЭЭ</a></li>
                     <li><a href="aboutus.html">БИДНИЙ ТУХАЙ</a></li>
                     <li><a href="login.html">НЭВТРЭХ</a></li>
                 </ul>
@@ -40,9 +44,9 @@
                 <h1>Хувийн мэдээлэл</h1>
                 <p>Бүх талбарыг бөглөнө үү!</p>
                 <ul>
-                    <li><img width="25px" height="25px" src="img_ts/icon_pro.png"><input type="text" placeholder="Овог*" required /></li>
-                    <li><img width="25px" height="25px" src="img_ts/icon_pro.png"><input type="text" placeholder="Нэр*" required/></li>
-                    <li><input type="date" placeholder="mm/dd/yyyy" required/><img width="25px" height="25px" src="img_ts/Icon_cal.png"></li>
+                    <li><img  src="img_ts/icon_pro.png" alt="profile_img"><input type="text" placeholder="Овог*" required /></li>
+                    <li><img  src="img_ts/icon_pro.png" alt="profile_img"><input type="text" placeholder="Нэр*" required/></li>
+                    <li><input type="date" placeholder="mm/dd/yyyy" required/><img width="25px" height="25px" src="img_ts/Icon_cal.png" alt="date_img"></li>
                     <li><input type="text" placeholder="Zip Code*" required/></li>
                     <li><input type="text" placeholder="Утасны дугаар*" required/></li>
                 </ul>
@@ -56,41 +60,37 @@
                 </ul>
             </div>
             <div>
-                <input type="checkbox">
-                <p>Би Prime Cineplex-ээс имэйл хүлээн авахыг зөвшөөрч байна.</p>
-                <button type="button">Бүртгэл үүсгэх</button>
+                <ul>
+                    <li><input type="checkbox"></li>
+                    <li><p>Би Prime Cineplex-ээс имэйл хүлээн авахыг зөвшөөрч байна.</p></li>
+                    <li><button type="button">Бүртгэл үүсгэх</button></li>
+                </ul>
             </div>
         </main>
         <footer>
             <div>
                  <address>
-                     <ul>
-                         <li>
-                             <img src="Images/footer_location-icon.png" style="height: 30px;">
-                             <p>Монгол улс, Улаанбаатар хот, <br>
-                                 Хан-Уул дүүрэг 11-р хороо, <br>
-                                 Дүнжингаравын гудамж, <br>
-                                 Зайсан Хилл Цогцолбор, 1-р давхар</p>
-                         </li>
-                         <li>
-                             <img src="Images/footer_mail-icon.png" style="height: 30px;">
-                             <a href="mailto:info@primecineplex.mn">info@primecineplex.mn</a>
-                         </li>
-                         <li>
-                             <img src="Images/footer_phone-icon.png" style="height: 30px;">
-                             <p>+976-7510-0000</p>
-                         </li>
-                     </ul>
+                 <ul>
+                     <li>
+                         <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
+                         <p>Монгол улс, Улаанбаатар хот, <br>
+                             Хан-Уул дүүрэг 11-р хороо, <br>
+                             Дүнжингаравын гудамж, <br>
+                             Зайсан Хилл Цогцолбор, 1-р давхар</p>
+                     </li>
+                     <li>
+                         <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
+                         <a href="mailto:info@primecineplex.mn">@primecineplex.mn</a>
+                     </li>
+                     <li>
+                         <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
+                         <a href="tel:+976-7510-0000">+976-7510-0000</a>
+                     </li>
+                 </ul>
                  </address>
             </div>
             <div>
-                 <label for="location">Салбараа сонгоно уу.</label>
-                 <select name="" id="">
-                     <option value="">Зайсан Хилл Комплекс</option>
-                     <option value="">Энканто товер</option>
-                     <option value="">Ботаник центер</option>
-                 </select>
-                 <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a></p>
+                 <a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a>
             </div> 
          </footer>
     </body>
