footer map zasav

--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
             </address>
        </div>
        <div>
-            <a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a>
-       </div> 
+        <p>Зайсан Хилл Комплекс</p>
+        <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" height="50px" alt="google map photo"></a></p>
+        <p>Энканто товер</p>
+        <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" height="50px" alt="google map photo"></a></p>
+        <p>Ботаник центер</p>
+        <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png"height="50px" alt="google map photo"></a></p>
+   </div>  
     </footer>
 </body>
 </html>
