--- a/create.html
+++ b/create.html
@@ -96,28 +96,33 @@
         <footer>
             <div>
                  <address>
-                    <ul>
-                        <li>
-                            <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
-                            <p>Монгол улс, Улаанбаатар хот, <br>
-                                Хан-Уул дүүрэг 11-р хороо, <br>
-                                Дүнжингаравын гудамж, <br>
-                                Зайсан Хилл Цогцолбор, 1-р давхар</p>
-                        </li>
-                        <li>
-                            <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
-                            <a href="mailto:info@primecineplex.mn">@primecineplex.mn</a>
-                        </li>
-                        <li>
-                            <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
-                            <a href="tel:+976-7510-0000">+976-7510-0000</a>
-                        </li>
-                    </ul>
+                 <ul>
+                     <li>
+                         <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
+                         <p>Монгол улс, Улаанбаатар хот, <br>
+                             Хан-Уул дүүрэг 11-р хороо, <br>
+                             Дүнжингаравын гудамж, <br>
+                             Зайсан Хилл Цогцолбор, 1-р давхар</p>
+                     </li>
+                     <li>
+                         <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
+                         <a href="mailto:info@primecineplex.mn">@primecineplex.mn</a>
+                     </li>
+                     <li>
+                         <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
+                         <a href="tel:+976-7510-0000">+976-7510-0000</a>
+                     </li>
+                 </ul>
                  </address>
             </div>
             <div>
-                 <a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a>
-            </div> 
+             <p>Зайсан Хилл Комплекс</p>
+             <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" height="50px" alt="google map photo"></a></p>
+             <p>Энканто товер</p>
+             <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" height="50px" alt="google map photo"></a></p>
+             <p>Ботаник центер</p>
+             <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png"height="50px" alt="google map photo"></a></p>
+        </div>  
          </footer>
     </body>
 </html>
