--- a/movie.html
+++ b/movie.html
@@ -92,17 +92,17 @@
                 <li><a href="https://suudalsongolt.html">21:00 PM</a></li>
             </ul>
         </nav>
-        <img src="Images/imdb_logo.png" alt="IMDB Logo" height="50" width="50">
+        <img src="Images/imdb_icon.png" alt="IMDB Logo" height="50" width="50">
         <h5>10/10</h5>
-        <img src="Images/rottentomatoes_logo.png" alt="ROTTEN TOMATOES logo" width="50" height="50">
+        <img src="Images/rotten_tomatos_icon.png" alt="ROTTEN TOMATOES logo" width="50" height="50">
         <h5>100%</h5>
-        <img src="Images/smallPoster1.jpg" alt="Poster1" width="50" height="50">
+        <img src="Images/nowplaying_poster1.png" alt="Poster1" height="50">
         <h5>5/5</h5>
     
     <div>
 
         <article>
-            <img src="img_mandah/directorSuzume.png" alt="Poster1" width="50" height="50">
+            <img src="img_mandah/directorSuzume.png" alt="director" height="50">
             <h5>Макото Шинкай</h5>
             <p>Макото Шинкай гэгддэг Макото Ниицү нь Японы хүүхэлдэйн киноны найруулагч, кино найруулагч, зохиолч, манга зураач юм.Шинкай 1996 онд Nihon Falcom-тай хамтран видео тоглоомын аниматороор ажлын гараагаа эхэлсэн бөгөөд анхны видео анимейшн гарснаар кино найруулагч гэдгээрээ хүлээн зөвшөөрөгдсөн. Тэр болон түүний муур.</p>
         </article>
