--- a/create.html
+++ b/create.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="css/create.css"/>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,17 +12,17 @@
         <header>
             <nav>
                 <address>
-                    <ul>
-                        <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
-                        <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
-                        <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
-                        <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
+                    <ul id="address_icon">
+                        <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" alt="facebook icon"></a></li>
+                        <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png"  alt="instagram icon"></a></li>
+                        <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png"  alt="youtube icon"></a></li>
+                        <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" alt="mail icon"></a></li>
                     </ul>
                 </address>
             </nav>
             <nav>
-                <ul>
-                    <li><a href="index.html"><img src="Images/logo.jpg" style="height: 50px;" alt="primeLogo"></a></li>
+                <a href="index.html"><img src="Images/logo.jpg" id="logo" alt="primeLogo"></a>
+                <ul id="menu">
                     <li><a href="nowplaying.html">КИНО</a></li>
                     <li><a href="aboutus.html">ЗӨВХӨН МАНАЙД</a></li>
                     <li><a href="aboutus.html">ҮЙЛЧИЛГЭЭ</a></li>
@@ -54,7 +55,7 @@
                         <label for="lastname">Овог:</label>
                         <input type="text" id="lastname" placeholder="Овог*" required />
                     </li>
-                    <li><img  height="25px" src="img_ts/icon_pro.png" alt="icon">
+                    <li><img height="25px" src="img_ts/icon_pro.png" alt="icon">
                         <label for="firstname">Нэр:</label>
                         <input type="text" id="firstname" placeholder="Нэр*" required/>
                     </li>
@@ -88,41 +89,48 @@
                 </ul>
             </section>
             <section>
-                <label for="accept_button">Би Prime Cineplex-ээс имэйл хүлээн авахыг зөвшөөрч байна.</label>
                 <input type="checkbox" id="accept_button">
+                <label id="accept_text" for="accept_button">Би Prime Cineplex-ээс имэйл хүлээн авахыг зөвшөөрч байна.</label>
                 <button type="button">Бүртгэл үүсгэх</button>
             </section>
+            
         </main>
         <footer>
-            <div>
+            <div id="address_info">
                  <address>
                  <ul>
                      <li>
-                         <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
+                         <img src="Images/footer_location-icon.png" alt="location icon">
                          <p>Монгол улс, Улаанбаатар хот, <br>
                              Хан-Уул дүүрэг 11-р хороо, <br>
                              Дүнжингаравын гудамж, <br>
                              Зайсан Хилл Цогцолбор, 1-р давхар</p>
                      </li>
                      <li>
-                         <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
+                         <img src="Images/footer_mail-icon.png" alt="mail icon">
                          <a href="mailto:info@primecineplex.mn">@primecineplex.mn</a>
                      </li>
                      <li>
-                         <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
+                         <img src="Images/footer_phone-icon.png"  alt="phone icon">
                          <a href="tel:+976-7510-0000">+976-7510-0000</a>
                      </li>
                  </ul>
                  </address>
             </div>
-            <div>
-             <p>Зайсан Хилл Комплекс</p>
-             <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" height="50px" alt="google map photo"></a></p>
-             <p>Энканто товер</p>
-             <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" height="50px" alt="google map photo"></a></p>
-             <p>Ботаник центер</p>
-             <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png"height="50px" alt="google map photo"></a></p>
-        </div>  
+            <div id="map">
+                 <div class="location">
+                     <p>Зайсан Хилл Комплекс</p>
+                     <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" alt="google map photo"></a></p>
+                 </div>
+                 <div class="location">
+                     <p>Энканто товер</p>
+                     <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" alt="google map photo"></a></p>
+                 </div>
+                 <div class="location">
+                     <p>Ботаник центер</p>
+                     <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" alt="google map photo"></a></p>
+                 </div>
+             </div>  
          </footer>
     </body>
 </html>
