--- a/login.html
+++ b/login.html
@@ -38,8 +38,8 @@
                 <article>
                     <h6>Нэвтрэх</h6>
                     <ul>
-                        <li><img height="25px" src="img_ts/icon_pro.png" alt="icon"><input type="email" placeholder="Нэвтрэх нэр(имэйл хаяг)"></li>
-                        <li><input type="text" placeholder="Нууц үг"></li>
+                        <li class="input"><input type="email" placeholder="Нэвтрэх нэр(имэйл хаяг)"></li>
+                        <li class="input"><input type="text" placeholder="Нууц үг"></li>
                         <li><button type="button">Нэвтрэх</button></li>
                         <li><a href="create.html">Бүртгүүлэх</a></li>
                     </ul>
