--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Манай дэлгэцнээ гарч буй кинонууд, Тун удахгүй гарах кино, кино үзэх ">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://www.dafontfree.net/embed/YWJoYXlhLWxpYnJlLXNlbWlib2xkLXJlZ3VsYXImZGF0YS8yNDUvYS8xODA0NjMvQWJoYXlhTGlicmUtU2VtaUJvbGQudHRm" rel="stylesheet" type="text/css"/>
     <link href='https://fonts.googleapis.com/css?family=Londrina Solid' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
