--- a/nowplaying.html
+++ b/nowplaying.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Одоо гарч буй кино</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <meta name="description" content="Одоо гарч буй кинонууд, дэлгэцнээ гарч буй кино, кино үзэх">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Манай дэлгэцнээ гарч буй кинонууд, Тун удахгүй гарах кино, кино үзэх ">
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link href="https://www.dafontfree.net/embed/YWJoYXlhLWxpYnJlLXNlbWlib2xkLXJlZ3VsYXImZGF0YS8yNDUvYS8xODA0NjMvQWJoYXlhTGlicmUtU2VtaUJvbGQudHRm" rel="stylesheet" type="text/css"/>
+        <link href='https://fonts.googleapis.com/css?family=Londrina Solid' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+        <title>PrimeCineplexMongolia</title>
+    </head>
 <body>
     <header>
         <nav>
             <address>
-                <ul>
-                    <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
-                    <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
-                    <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
-                    <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
+                <ul id="address_icon">
+                    <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" alt="facebook icon"></a></li>
+                    <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png"  alt="instagram icon"></a></li>
+                    <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png"  alt="youtube icon"></a></li>
+                    <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" alt="mail icon"></a></li>
                 </ul>
             </address>
         </nav>
         <nav>
-            <ul>
-                <li><a href="index.html"><img src="Images/logo.jpg" style="height: 50px;" alt="primeLogo"></a></li>
+            <a href="index.html"><img src="Images/logo.jpg" id="logo" alt="primeLogo"></a>
+            <ul id="menu">
                 <li><a href="nowplaying.html">КИНО</a></li>
                 <li><a href="aboutus.html">ЗӨВХӨН МАНАЙД</a></li>
                 <li><a href="aboutus.html">ҮЙЛЧИЛГЭЭ</a></li>
@@ -128,35 +133,41 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div id="address_info">
              <address>
              <ul>
                  <li>
-                     <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
+                     <img src="Images/footer_location-icon.png" alt="location icon">
                      <p>Монгол улс, Улаанбаатар хот, <br>
                          Хан-Уул дүүрэг 11-р хороо, <br>
                          Дүнжингаравын гудамж, <br>
                          Зайсан Хилл Цогцолбор, 1-р давхар</p>
                  </li>
                  <li>
-                     <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
+                     <img src="Images/footer_mail-icon.png" alt="mail icon">
                      <a href="mailto:info@primecineplex.mn">@primecineplex.mn</a>
                  </li>
                  <li>
-                     <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
+                     <img src="Images/footer_phone-icon.png"  alt="phone icon">
                      <a href="tel:+976-7510-0000">+976-7510-0000</a>
                  </li>
              </ul>
              </address>
         </div>
-        <div>
-         <p>Зайсан Хилл Комплекс</p>
-         <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" height="50px" alt="google map photo"></a></p>
-         <p>Энканто товер</p>
-         <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" height="50px" alt="google map photo"></a></p>
-         <p>Ботаник центер</p>
-         <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png"height="50px" alt="google map photo"></a></p>
-    </div>  
+        <div id="map">
+             <div class="location">
+                 <p>Зайсан Хилл Комплекс</p>
+                 <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" alt="google map photo"></a></p>
+             </div>
+             <div class="location">
+                 <p>Энканто товер</p>
+                 <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" alt="google map photo"></a></p>
+             </div>
+             <div class="location">
+                 <p>Ботаник центер</p>
+                 <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" alt="google map photo"></a></p>
+             </div>
+         </div>  
      </footer>
 </body>
 </html>
