--- a/aboutus.html
+++ b/aboutus.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-       <nav>
-            <p>hajgjdgfakgfeakf</p>
-       </nav>
+        <nav>
+            <a href=""><img src="logo.jpg" style="height: 100px; width: 100px;"></a>
+        </nav>
     </header>
 </body>
 </html>
