--- a/nowplaying.html
+++ b/nowplaying.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Манай дэлгэцнээ гарч буй кинонууд, Тун удахгүй гарах кино, кино үзэх ">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/nowplaying.css">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://www.dafontfree.net/embed/YWJoYXlhLWxpYnJlLXNlbWlib2xkLXJlZ3VsYXImZGF0YS8yNDUvYS8xODA0NjMvQWJoYXlhTGlicmUtU2VtaUJvbGQudHRm" rel="stylesheet" type="text/css"/>
         <link href='https://fonts.googleapis.com/css?family=Londrina Solid' rel='stylesheet'>
@@ -36,10 +36,12 @@
         </nav>
     </header>
     <main>
+        <h2>МАНАЙ ДЭЛГЭЦНЭЭ</h2>
         <section>
             <article>
-                <a href="movie.html">
-                    <img src="Images/nowplaying_poster1.png" style="height: 100px;" alt="Suzume poster">Suzume
+                <a style="width: 20px;" href="movie.html">
+                    <img class="movie_poster" src="Images/nowplaying_poster1.png" alt="Suzume poster">
+                    <span class="article-text">Suzume</span>
                 </a>
                 <a href="https://www.imdb.com/title/tt16428256/?ref_=nv_sr_srsg_3_tt_4_nm_4_q_Suzu">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">7.7
@@ -50,7 +52,7 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/nowplaying_poster2.png" style="height: 100px;" alt="Elemental poster">Elemental
+                    <img src="Images/nowplaying_poster2.png" class="movie_poster" alt="Elemental poster">Elemental
                 </a>
                 <a href="https://www.imdb.com/title/tt15789038/?ref_=nv_sr_srsg_0_tt_2_nm_6_q_ele">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">7.0
@@ -61,7 +63,7 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/nowplaying_poster3.png" style="height: 100px;" alt="The NUN poster">The NUN
+                    <img src="Images/nowplaying_poster3.png" class="movie_poster" alt="The NUN poster">The NUN
                 </a>
                 <a href="https://www.imdb.com/title/tt10160976/?ref_=nv_sr_srsg_2_tt_6_nm_0_q_the%2520nun">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">5.8
@@ -72,12 +74,12 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/nowplaying_poster4.png" style="height: 100px;" alt="Будилаан poster">Будилаан
+                    <img src="Images/nowplaying_poster4.png" class="movie_poster" alt="Будилаан poster">Будилаан
                 </a>
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/comingsoon_poster1.png" style="height: 100px;" alt="The Creator poster">The Creator
+                    <img src="Images/comingsoon_poster1.png" class="movie_poster" alt="The Creator poster">The Creator
                 </a>
                 <a href="https://www.imdb.com/title/tt11858890/?ref_=nv_sr_srsg_0_tt_7_nm_1_q_the%2520crea">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">7.2
@@ -88,7 +90,7 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/comingsoon_poster2.png" style="height: 100px;" alt="Paw Patrol poster">Paw Patrol
+                    <img src="Images/comingsoon_poster2.png" class="movie_poster" alt="Paw Patrol poster">Paw Patrol
                 </a>
                 <a href="https://www.imdb.com/title/tt15837338/?ref_=nv_sr_srsg_0_tt_8_nm_0_q_paw%2520patrol">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">6.1
@@ -99,7 +101,7 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/comingsoon_poster3.png" style="height: 100px;" alt="Cobweb poster">Cobweb
+                    <img src="Images/comingsoon_poster3.png" class="movie_poster" alt="Cobweb poster">Cobweb
                 </a>
                 <a href="https://www.imdb.com/title/tt9100018/?ref_=nv_sr_srsg_1_tt_6_nm_1_q_cobwe">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">5.9
@@ -110,7 +112,7 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/comingsoon_poster4.png" style="height: 100px;" alt="Saw X poster">Saw X
+                    <img src="Images/comingsoon_poster4.png" class="movie_poster" alt="Saw X poster">Saw X
                 </a>
                 <a href="https://www.imdb.com/title/tt21807222/?ref_=nv_sr_srsg_1_tt_7_nm_0_q_saw">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">7.2
@@ -121,7 +123,7 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/comingsoon_poster5.png" style="height: 100px;" alt="The Exorcist poster">The Exorcist
+                    <img src="Images/comingsoon_poster5.png" class="movie_poster" alt="The Exorcist poster">The Exorcist
                 </a>
                 <a href="https://www.imdb.com/title/tt12921446/?ref_=nv_sr_srsg_4_tt_7_nm_0_q_the%2520exorcist">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">7.1
