ticketing.html holbov

--- a/movie.html
+++ b/movie.html
@@ -86,12 +86,12 @@
                 </li>
             </ul>
             <ul>
-                <li><a href="https://suudalsongolt.html">11:00 PM</a></li>
-                <li><a href="https://suudalsongolt.html">13:00 PM</a></li>
-                <li><a href="https://suudalsongolt.html">15:00 PM</a></li>
-                <li><a href="https://suudalsongolt.html">17:00 PM</a></li>
-                <li><a href="https://suudalsongolt.html">19:00 PM</a></li>
-                <li><a href="https://suudalsongolt.html">21:00 PM</a></li>
+                <li><a href="ticketing.html">11:00 PM</a></li>
+                <li><a href="ticketing.html">13:00 PM</a></li>
+                <li><a href="ticketing.html">15:00 PM</a></li>
+                <li><a href="ticketing.html">17:00 PM</a></li>
+                <li><a href="ticketing.html">19:00 PM</a></li>
+                <li><a href="ticketing.html">21:00 PM</a></li>
             </ul>
         </nav>
         <img src="Images/imdb_icon.png" alt="IMDB Logo" height="50" width="50">
