--- a/ticketing.html
+++ b/ticketing.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Төлбөр баталгаажуулах, тасалбар захиалах"> 
+    <link rel="stylesheet" href="css/ticketing.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Ticketing</title>
 </head>
 <body>
