--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="aboutus.html">ЗӨВХӨН МАНАЙД</a></li>
                 <li><a href="aboutus.html">ҮЙЛЧИЛГЭЭ</a></li>
                 <li><a href="aboutus.html">БИДНИЙ ТУХАЙ</a></li>
-                <li><a href="login.html">НЭВТРЭХ</a></li>
+                <li><a id="login" href="login.html">НЭВТРЭХ</a></li>
             </ul>
         </nav>
     </header>
@@ -40,10 +40,10 @@
                 <li><img src="Images/bigposter3.png" id="bigposter3" alt="The NUN poster"></li>
             </ul>
             <div class="button">
-                <button>Трэйлэр
+                <button>ТРЭЙЛЕР
                     <img src="Images/header_yt_icon.png" alt="yt icon">
                 </button>
-                <button>Захиалах
+                <button id="buy_button">ЗАХИАЛАХ
                     <img src="Images/ticket_icon.png" alt="ticket icon">    
                 </button>
             </div>
