--- a/nowplaying.html
+++ b/nowplaying.html
@@ -28,7 +28,7 @@
                 <li><a href="aboutus.html">ЗӨВХӨН МАНАЙД</a></li>
                 <li><a href="aboutus.html">ҮЙЛЧИЛГЭЭ</a></li>
                 <li><a href="aboutus.html">БИДНИЙ ТУХАЙ</a></li>
-                <li><a href="login.html">НЭВТРЭХ</a></li>
+                <li><a id="login" href="login.html">НЭВТРЭХ</a></li>
             </ul>
         </nav>
     </header>
