--- a/movie.html
+++ b/movie.html
@@ -90,13 +90,13 @@
                         </li>
                     </ul>
                     <ul>
-                        <li><a class="time1" href="https://ticketing.html">11:00 PM</a></li>
-                        <li><a class="time2" href="https://ticketing.html">13:00 PM</a></li>
-                        <li><a class="time3" href="https://ticketing.html">15:00 PM</a></li>
-                        <li><a class="time4" href="https://ticketing.html">17:00 PM</a></li>
-                        <li><a class="time5" href="https://ticketing.html">19:00 PM</a></li>
-                        <li><a class="time6" href="https://ticketing.html">21:00 PM</a></li>
-                        <li><a class="time7" href="https://ticketing.html">23:00 PM</a></li>
+                        <li><a class="time1" href="ticketing.html">11:00 PM</a></li>
+                        <li><a class="time2" href="ticketing.html">13:00 PM</a></li>
+                        <li><a class="time3" href="ticketing.html">15:00 PM</a></li>
+                        <li><a class="time4" href="ticketing.html">17:00 PM</a></li>
+                        <li><a class="time5" href="ticketing.html">19:00 PM</a></li>
+                        <li><a class="time6" href="ticketing.html">21:00 PM</a></li>
+                        <li><a class="time7" href="ticketing.html">23:00 PM</a></li>
                     </ul>
                 </nav>
                 <img src="Images/imdb_icon.png" alt="IMDB Logo" height="50" width="50">
