--- a/create.html
+++ b/create.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="css/create.css"/>
-        <link rel="stylesheet" href="css/style.css"/>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Бүртгүүлэх , PrimeCineplexMongolia гишүүн болох, Prime loyalty ">
+        <meta name="description" content="Манай дэлгэцнээ гарч буй кинонууд, Тун удахгүй гарах кино, кино үзэх ">
+        <link rel="stylesheet" href="css/create.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Бүртгүүлэх</title>
     </head>
     <body>
