--- a/login.html
+++ b/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
     <html lang="en">
         <head>
-        <link rel="stylesheet" href="css/login.css"/>
-        <link rel="stylesheet" href="css/style.css"/>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Нэвтрэх , PrimeCineplexMongolia гишүүн болох, Prime loyalty ">
-        <title>Нэвтрэх</title>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta name="description" content="Манай дэлгэцнээ гарч буй кинонууд, Тун удахгүй гарах кино, кино үзэх ">
+            <link rel="stylesheet" href="css/login.css">
+            <link rel="stylesheet" href="css/style.css">
+            <title>Нэвтрэх</title>
         </head>
         <body>
             <header>
@@ -28,7 +28,7 @@
                         <li><a href="aboutus.html">ЗӨВХӨН МАНАЙД</a></li>
                         <li><a href="aboutus.html">ҮЙЛЧИЛГЭЭ</a></li>
                         <li><a href="aboutus.html">БИДНИЙ ТУХАЙ</a></li>
-                        <li><a href="login.html">НЭВТРЭХ</a></li>
+                        <li><a id="login" href="login.html">НЭВТРЭХ</a></li>
                     </ul>
                 </nav>
             </header>
