--- a/aboutus.html
+++ b/aboutus.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrimeCineplex</title>
 </head>
-<body>
+<body style="background-color: black;">
     <header>
         <nav>
-            <a href=""><img src="logo.jpg" style="height: 100px; width: 100px;"></a>
+            <a href=""><img src="Images/logo.jpg" style="height: 100px; width: 100px;"></a>
         </nav>
     </header>
 </body>
