--- a/ticketing.html
+++ b/ticketing.html
@@ -439,14 +439,19 @@
         
     </div>
     <aside>
-        <h4>Таны сонголт</h4>
-        <img src="Images/nowplaying_poster1.png" alt="poster" width="10%" height="10%">
-        <label for="movie_name">SUZUME</label>
-        <label for="info_movie">PG • 2 цаг 2 минут •  Адал явдал, Драм, Уран зөгнөлт •  2023.11.06</label>
-        <label for="location">Салбар: Зайсан</label>
-        <label for="hall">Танхим: 3</label>
-        <label for="date">Он, сар, өдөр: 2023.11.17</label>
-        <label for="time">Хугацаа: 2:47 PM</label>
+        <h4>ТАНЫ СОНГОЛТ</h4>
+        <div class="line"></div>
+        <article class="movie_details">
+            <img src="Images/nowplaying_poster1.png" alt="poster">
+            <div id="movie_info">
+                <label for="movie_name">SUZUME</label>
+                <label for="info_movie">PG • 2 цаг 2 минут •  Адал явдал, Драм, Уран зөгнөлт •  2023.11.06</label>
+                <label for="location">Салбар: Зайсан</label>
+                <label for="hall">Танхим: 3</label>
+                <label for="date">Он, сар, өдөр: 2023.11.17</label>
+                <label for="time">Хугацаа: 2:47 PM</label>
+            </div>
+        </article>
         <label for="chair">Таны суудал: F11 • F12 • F13</label>
         <p>Тоо ширхэг</p>
         <p>Тасалбарын үнэ</p>
